Fix spacing between slider

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -11950,10 +11950,6 @@ button.close {
 
    /* 5. SLIDER */
 
-   	#slider{
-   		margin-top: 80px;
-   	}
-
    	#home-carousel  .item {
    		background-position: center top;
    		background-repeat: no-repeat;
